[package]
name = "janus-array"
version = "0.1.0"
edition = "2021"
authors = ["Tu <gbiondo@reveng3.org>"]
description = "Efficient dual-access data structure for hierarchical binary data"
license = "MIT"
repository = "https://github.com/gb-at-r3/janus-array"
keywords = ["binary", "parsing", "data-structures", "algorithms"]
categories = ["data-structures", "parsing"]

[dependencies]
